# raytracer-omp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: benchmark.py  plot.py
benchmark/results/: results.csv
include/: parallel_renderer.hpp  serial_renderer.hpp
include/utils/: io.hpp  scene.hpp  triangle.hpp  vec3.hpp
reference/: SimpleRenderWithSTL.py
resources/stl/: test.stl
src/: main.cpp  parallel.cpp  serial.cpp
